kqed_dev4/src/objects/Prospect_Research_Reports__c.object
<CustomObject>
    <description>Prospect Research Reports are utilized for profiling of members, prospective members and constituents by the Prospect Research Team.</description>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prospect_Research_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospect Research Reports</relationshipLabel>
        <relationshipName>Prospect_Research_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prospect_Research_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Born_Day__c</fullName>
        <formula>Contact__r.Birth_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Born Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Born_Month__c</fullName>
        <formula>Contact__r.Birth_Month__c</formula>
        <label>Born Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Born_Year__c</fullName>
        <formula>Contact__r.Birth_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Born Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Affiliations__c</fullName>
        <label>Business Affiliations</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account__r.Preferred_Address__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Research Reports</relationshipLabel>
        <relationshipName>Prospect_Research_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Family_Foundation__c</fullName>
        <label>Family Foundation</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Financial_Information__c</fullName>
        <label>Financial Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MG_Rating__c</fullName>
        <label>MG Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_recent_College__c</fullName>
        <label>Most recent College</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Philanthropic_Activities__c</fullName>
        <label>Other Philanthropic Activities</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Personal_Summary__c</fullName>
        <label>Personal Summary</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recent_College__c</fullName>
        <formula>Most_recent_College__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent College</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Company__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Name_Formula__c</fullName>
        <formula>IF(Spouse_Name__c != null, HYPERLINK(&quot;/&quot;+Spouse_Name__c,Spouse_Name__r.FirstName +&apos; &apos;+ Spouse_Name__r.LastName,&quot; _self&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spouse Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Research Reports (Spouse Name)</relationshipLabel>
        <relationshipName>Prospect_Research_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.Preferred_Address__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGBH_Connections__c</fullName>
        <label>WGBH Connections</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>Prospect Research Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PRR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospect Research Reports</pluralLabel>
    <recordTypes>
        <fullName>Event_Bio</fullName>
        <active>true</active>
        <description>PRR for Cultivation Events (i.e. 1 paragraph with a picture)</description>
        <label>Event Bio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Profile</fullName>
        <active>true</active>
        <description>Detailed PRR for major gift/board prospects (i.e. 1-3 pages)</description>
        <label>Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Research_Note</fullName>
        <active>true</active>
        <description>PRR for brief notes on new information on a prospect (i.e. an obituary, news articles, etc.)</description>
        <label>Research Note</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>